--- a/pom.xml
+++ b/pom.xml
@@ -4,74 +4,47 @@
 
   <groupId>org.sodeac</groupId>
   <artifactId>org.sodeac.common</artifactId>
-  <version>0.6.10</version>
+  <version>0.7.1</version>
   
   <name>Sodeac Common</name>
   <description>Core framework for sodeac project</description>
   <packaging>bundle</packaging>
   
+  <parent>
+	  <groupId>com.icg-software</groupId>
+	  <artifactId>osgi-parent</artifactId>
+	  <version>2.0.1</version>
+  </parent>
+  
   <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <jdk.version>1.8</jdk.version>
     <bundle.version>0.6.10</bundle.version>
   </properties>
   
   <dependencies>
+    
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.13.1</version>
-    </dependency>
-    <dependency>
-      <groupId>org.osgi</groupId>
-      <artifactId>org.osgi.core</artifactId>
-      <version>6.0.0</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.osgi</groupId>
-      <artifactId>osgi.cmpn</artifactId>
-      <version>6.0.0</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-      <groupId>javax.xml.bind</groupId>
-      <artifactId>jaxb-api</artifactId>
-      <version>2.0</version>
-      <scope>provided</scope>
-    </dependency>
-    <dependency>
-	    <groupId>org.slf4j</groupId>
-	    <artifactId>slf4j-api</artifactId>
-	    <version>1.7.0</version>
+	    <groupId>jakarta.xml.bind</groupId>
+	    <artifactId>jakarta.xml.bind-api</artifactId>
+	    <version>4.0.2</version>
+    	<scope>provided</scope>
 	</dependency>
+	
 	<dependency>
 	    <groupId>com.h2database</groupId>
 	    <artifactId>h2</artifactId>
-	    <version>1.4.200</version>
+	    <version>2.2.224</version>
 	</dependency>
 	<dependency>
 	    <groupId>org.postgresql</groupId>
 	    <artifactId>postgresql</artifactId>
-	    <version>42.2.14</version>
+	    <version>42.7.2</version>
 	</dependency>
-	<dependency>
-      <groupId>org.easymock</groupId>
-      <artifactId>easymock</artifactId>
-      <version>3.6</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
-      <version>1.7.30</version>
-      <scope>test</scope>
-    </dependency>
     <dependency>
 	    <groupId>org.glassfish</groupId>
 	    <artifactId>jakarta.json</artifactId>
 	    <version>1.1.6</version>
 	</dependency>
+	
   </dependencies>
   
   <build>
@@ -106,68 +79,10 @@
   	
     <plugins>
       <plugin>
-	    <groupId>org.apache.maven.plugins</groupId>
-	    <artifactId>maven-source-plugin</artifactId>
-	    <version>3.0.1</version>
-	    <executions>
-	      <execution>
-	        <id>attach-sources</id>
-	        <goals>
-	          <goal>jar-no-fork</goal>
-	        </goals>
-	      </execution>
-	    </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-javadoc-plugin</artifactId>
-        <version>3.1.1</version>
-        <configuration>
-            <source>${jdk.version}</source>
-        </configuration>
-        <executions>
-          <execution>
-            <id>attach-javadocs</id>
-            <goals>
-              <goal>jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.0</version>
-        <configuration>
-          <source>${jdk.version}</source>
-          <target>${jdk.version}</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>buildnumber-maven-plugin</artifactId>
-        <version>1.4</version>
-		<executions>
-          <execution>
-            <phase>validate</phase>
-            <goals>
-              <goal>create</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
-        <extensions>true</extensions>
-        <version>4.1.0</version>
         <configuration>
           <instructions>
-          	<Bundle-SymbolicName>${project.artifactId};singleton:=true</Bundle-SymbolicName>
-            <Bundle-Version>${bundle.version}</Bundle-Version>
-            <Bundle-RequiredExecutionEnvironment>JavaSE-1.8</Bundle-RequiredExecutionEnvironment>
-            <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
-            <Implementation-Build>${scmBranch}@r${buildNumber}</Implementation-Build>
             <Export-Package>
             	org.sodeac.common;version="${bundle.version}",
             	org.sodeac.common.annotation;version="${bundle.version}",
@@ -200,17 +115,16 @@
             </Private-Package>
             <Import-Package>
             	org.slf4j;version="[1.7,2)";resolution:=optional,
-            	javax.xml.bind.annotation;version="[2,3)";resolution:=optional,
+            	jakarta.xml.bind.annotation;version="[2,3)";resolution:=optional,
             	org.postgresql.*;resolution:=optional;version=!,
             	javax.json;version="[1.1,2)";resolution:=optional,
             	javax.json.stream;version="[1.1,2)";resolution:=optional,
                 *
             </Import-Package>
           </instructions>
-          <source>${jdk.version}</source>
-          <target>${jdk.version}</target>
         </configuration>
       </plugin>
+      <!--
       <plugin>
         <groupId>org.sodeac</groupId>
         <artifactId>org.sodeac.mvn.plugin</artifactId>
@@ -238,6 +152,7 @@
           </execution>
         </executions>
       </plugin>
+      -->
     </plugins>
     <!--pluginManagement>
     	<plugins>
@@ -303,7 +218,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-gpg-plugin</artifactId>
-					<version>1.6</version>
+					<version>3.1.0</version>
 					<executions>
 						<execution>
 							<id>sign-artifacts</id>
